# directremote

./: CMakeLists.txt  License.txt  Readme.md  build.py
cmake/: Toolchain-i686-w64-mingw32.cmake  Toolchain-x86_64-w64-mingw32.cmake
core/: CMakeLists.txt
core/CFrameworkLib/: ApplicationMain.cpp  CMakeLists.txt  ConsoleLogger.cpp  PerformanceMonitor.cpp  SingleInstanceLock.cpp
core/CFrameworkLib/include/: ApplicationMain.h  Framework.h  ILogger.h  IPerformanceMonitor.h  SingleInstanceLock.h  UdpChunk.h
core/CppFrameworkLib/: CMakeLists.txt  DynamicPlugin.cpp  FrameAssembly.cpp  MessageAssembly.cpp  PacketAssembly.cpp  ProgramOptions.cpp  RandomGenerator.cpp  ShowConsole.cpp  Socket.cpp  ViewerResponseBuilder.cpp
core/CppFrameworkLib/ErasureCode/: Config.hpp  MemSwap.cpp  MemSwap.hpp  MemXOR.cpp  MemXOR.hpp  Platform.hpp  cauchy_256.cpp  cauchy_256.h
core/CppFrameworkLib/include/: DynamicPlugin.h  ErasureCode.h  FrameAssembly.h  MessageAssembly.h  PacketAssembly.h  ProgramOptions.h  RandomGenerator.h  ShowConsole.h  Socket.h  ViewerResponseBuilder.h
core/DRHost/: CMakeLists.txt  HostNetworkAbstraction.cpp  HostNetworkAbstraction.h  InputInject.h  InputInject_linux.cpp  InputInject_win32.cpp  main.cpp
core/DRViewerLib/: CMakeLists.txt  ViewerApi.cpp
core/DRViewerLib/include/: ViewerApi.h
core/ProtocolServer/: CMakeLists.txt  main.cpp  main_tcp.cpp
core/RawProtocols/: CMakeLists.txt  UdpProtocol.cpp
core/RawProtocols/include/: UdpProtocol.h
core/resources/: windows.rc
